@@ -34,6 +34,7 @@ Version 1.0.1 to be released
 - Enhancement: Added CSort to support multisort (Qiang)
 - Enhancement: Refactored the code generated by the crud command (Qiang)
 - Enhancement: Added "contact" page to the skeleton application (Qiang)
+- Enhancement: Added CMarkdownParser::safeTransform (Qiang)
 
 Version 1.0 December 3, 2008
 ----------------------------
